feat: javascript today i learning

--- a/index.html
+++ b/index.html
@@ -13,5 +13,20 @@
         };
         console.log(person);
     </script>
+
+    <script>
+        var circle = {
+            radius: 50, //프로퍼티
+            // 원의 지름
+            getDiameter: function () { //메소드
+                return 2 * this.radius; //this는 circle를 가리킨다.
+            }
+        };
+        console.log(circle.getDiameter());
+    </script>
+
+    <script>
+        const 
+    </script>
 </body>
 </html>
