--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
     </script>
 
     <script>
-        const 
+        // m 이상 n 이하의 무작위 정수를 반환합니다.
+        function rand(m,n) {
+            return m + Math.floor((n-m+1)*Math.random());
+        }
+        // 크라운 앤 엥커 게임의 여섯 그림 중 하나에 해당하는 문자열을 무작위로 반환합니다.
+        function randFace() {
+            return ["crown", "anchor", "heart", "spade", "club", "diamond"]
+            [rand(0,5)];
+        }
+        let funds = 50;
+        let round = 0;
+        while(funds > 1 && funds < 100) {
+            round++;
+            console.log(``)
+        }
     </script>
 </body>
 </html>
