자바스크립트 기초편 예제

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
         상수 표기는 대문자와 스네이크 표기법만 사용합니다. (ROOM_TEMP_C) */
         const ROOM_TEMP_C = 21.5, MAX_TEMP_C = 30;
     </script>
+
+    <script>
+        let count = 10; //숫자 리터널, count는 더블입니다.
+        const blue = 0x0000ff; //16진수 ff는 10진수 225와 같습니다.
+        const umask = 0o0022; //8진수 22는 십진수 18과 같습니다.
+        const roomTemp = 21.5; //십진수
+        const c = 3.036; //지수(3.0 ㅌ 10^6 = 3,000,000)
+        const e = -1.6e-19; //지수 (-1.6ㅌ10^-19 = 0.000000000000000000016)
+        const inf = Infinity;
+        const ninf = -Infinity;
+        const nan = NaN; //숫자가 아님.
+    </script>
 </body>
 <style>
     #mainCanvas {
